図をさらに追加

--- a/thesis/asablk.tex
+++ b/thesis/asablk.tex
@@ -12,12 +12,16 @@
 \documentclass[11pt, onecolumn, twoside, a4paper]{article}
 \usepackage{iiai-c}
 %\usepackage{} % for times new roman; Antoine will send email
+%
 \usepackage{graphicx}
+
+\usepackage{comment}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{lipsum}
 \usepackage{mathptmx}
+
 
 \usepackage[rm,up,sc,topmarks,calcwidth,pagestyles]{titlesec}
 \titleformat{\section}{\Large\bfseries\rmfamily}{\thesection}{1em}{}
@@ -136,6 +140,7 @@ Patterns are combinations, conbining by basic blocks and extract every where mat
 
 
 
+\include{inst_system}
 
 %\begin{figure}[htbp]
 % \begin{center}
