図の部分はエラーでてたのでコメントアウトしてます

--- a/thesis/asablk.tex
+++ b/thesis/asablk.tex
@@ -14,7 +14,7 @@
 %\usepackage{} % for times new roman; Antoine will send email
 %
 \usepackage{graphicx}
-
+%\usepackage[dvipdfm]{graphicx}
 \usepackage{comment}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -140,6 +140,7 @@ Patterns are combinations, conbining by basic blocks and extract every where mat
 
 
 
+
 \include{inst_system}
 
 %\begin{figure}[htbp]
@@ -164,6 +165,7 @@ Patterns are combinations, conbining by basic blocks and extract every where mat
 \subsubsection{Electronic publication(Article in a conference proceedings)}
 \subsubsection{Electronic publication(Online-only publication)}
 \subsection{Abbreviations in References}
+
 
 %\begin{table}[hbtp]
 % \caption{Abbreviations}
